GERENCIANDO SERVIDOR CENTOS-7_2019/FIREWALL/EXEMPLO_1-FIREWALL-IPTABLES.txt
:PREROUTING ACCEPT [778:51048]
  :POSTROUTING ACCEPT [2:104]
  :OUTPUT ACCEPT [186:11132]
  #
  #
  ####################################################################################################
  ####################################################################################################
  ####################################################################################################
  #									### *** LEGENDAS *** ###
  #	207.12.112.23 = IP DE REDE EXTERNA DISPONIBILIZADA PELO PROVEDOR DE INTERNET = IP PÚBLICO 
  #	192.168.5.0 = IP DE REDE INTERNA CRIADA PARA REDE LOCAL DA EMPRESA X = IP PRIVADO DE CLASSE C 
  ####################################################################################################
  ####################################################################################################
  ####################################################################################################
  
  
  ### EXEMPLO DE ACESSO REMOTO AO SERVIDORES ###
  #
  ### TS SERVIDOR03 ### 
  -A PREROUTING -d 207.12.112.23/32 -p tcp -m tcp --dport 3390 -j DNAT --to-destination 192.168.5.3:3389 
  ### TS SERVIDOR07 ###
 -A PREROUTING -d 207.12.112.23/32 -p tcp -m tcp --dport 3392 -j DNAT --to-destination 192.168.5.7:3389
 ### TS SERVIDOR05 ###
 -A PREROUTING -d 207.12.112.23/32 -p tcp -m tcp --dport 3391 -j DNAT --to-destination 192.168.5.5:3389
 
 #########################################################################################################
 #########################################################################################################
 # EXEMPLOS DE LIBERAÇÃO DE ACESSO AO SERVIDOR WEB  
		
 -A PREROUTING -d 207.12.112.23/32 -p tcp -m tcp --dport 8888 -j DNAT --to-destination 192.168.5.5:8888
 -A PREROUTING -d 207.12.112.23/32 -p tcp -m tcp --dport 80 -j DNAT --to-destination 192.168.5.3:80
 -A PREROUTING -d 207.12.112.23/32 -p tcp -m tcp --dport 8080 -j DNAT --to-destination 192.168.5.3:80
 -A PREROUTING -d 207.12.112.23/32 -p tcp -m tcp --dport 80 -j DNAT --to-destination 192.168.5.101
 -A PREROUTING -d 207.12.112.23/32 -p tcp -m tcp --dport 80 -j DNAT --to-destination 192.168.5.102
 -A PREROUTING -d 207.12.112.23/32 -p tcp -m tcp --dport 80 -j DNAT --to-destination 192.168.5.103
 -A PREROUTING -d 207.12.112.23/32 -p tcp -m tcp --dport 80 -j DNAT --to-destination 192.168.5.104
 -A PREROUTING -d 207.12.112.23/32 -p tcp -m tcp --dport 80 -j DNAT --to-destination 192.168.5.105
 
 #########################################################################################################
 #########################################################################################################
 #
 # EXEMPLOS DE LIBERAÇÃO DE ACESSO AO SERVIDOR WEB DE UM PROGRAMA ESPECIFICO EM PORTA ESPECIFICA PARA UM COMPUTADOR ESPECIFICO
 # COMO EXEMPLO CONCRETO TENHO: ACESSO A CÂMERAS ATRAVÉS DE UM DVR.  
 # 	
 -A PREROUTING -d 207.12.112.23/32 -p tcp -m tcp --dport 6060 -j DNAT --to-destination 192.168.5.9
 -A PREROUTING -d 207.12.112.23/32 -p udp -m udp --dport 37777 -j DNAT --to-destination 192.168.5.9
 -A PREROUTING -d 207.12.112.23/32 -p tcp -m tcp --dport 37777 -j DNAT --to-destination 192.168.5.9
 -A PREROUTING -d 207.12.112.23/32 -p udp -m udp --dport 6060 -j DNAT --to-destination 192.168.5.9
 -A PREROUTING -d 207.12.112.23/32 -p tcp -m tcp --dport 6061 -j DNAT --to-destination 192.168.5.8
 -A PREROUTING -d 207.12.112.23/32 -p udp -m udp --dport 6061 -j DNAT --to-destination 192.168.5.8
 -A PREROUTING -d 207.12.112.23/32 -p tcp -m tcp --dport 37779 -j DNAT --to-destination 192.168.5.8
 -A PREROUTING -d 207.12.112.23/32 -p udp -m udp --dport 37779 -j DNAT --to-destination 192.168.5.8
 -A PREROUTING -d 207.12.112.23/32 -p udp -m udp --dport 8443 -j DNAT --to-destination 192.168.5.138
 -A PREROUTING -d 207.12.112.23/32 -p tcp -m tcp --dport 8443 -j DNAT --to-destination 192.168.5.138
 #
 #########################################################################################################
 #########################################################################################################
 #
 # EXEMPLO DE LIBERAÇÃO DE ACESSO A SERVIÇOS INTERNOS DO SERVIDOR LOCAL PARA O MUNDO
 # COMO EXEMPLO AQUI TENHO: SERVIDOR DE EMAIL - PROTOCOLO DE SMTP  
 # 	
 -A POSTROUTING -p tcp -m tcp --dport 25 -j SNAT --to-source 207.12.112.23
 -A POSTROUTING -p tcp -m tcp --dport 587 -j SNAT --to-source 207.12.112.23
 #
 #########################################################################################################
 #########################################################################################################
 #
 # EXEMPLO DE LIBERAÇÃO DE ACESSO A REDE INTERNA DO SERVIDOR LOCAL PARA A SUA PRÓPRIA REDE LOCAL
 # EXEMPLO DE LIBERAÇÃO DE ACESSO A REDE INTERNA DE INTERNET DO SERVIDOR LOCAL PARA A SUA PRÓPRIA REDE LOCAL  
 #
 -A POSTROUTING -o eth0 -j MASQUERADE
 -A POSTROUTING -o eth3 -j MASQUERADE
 -A POSTROUTING -o eth4 -j MASQUERADE
 #
 ########################################################################################################
 ########################################################################################################
 #
 # EXEMPLO ABAIXO É SÓ SE PRECISAR
 #
 -A OUTPUT -d 207.12.112.23/32 -p tcp -m tcp --dport 8888 -j DNAT --to-destination 192.168.5.5:8888
 -A OUTPUT -d 207.12.112.23/32 -p tcp -m tcp --dport 80 -j DNAT --to-destination 192.168.5.3:80
 -A OUTPUT -d 207.12.112.23/32 -p tcp -m tcp --dport 80 -j DNAT --to-destination 192.168.5.101
 -A OUTPUT -d 207.12.112.23/32 -p tcp -m tcp --dport 80 -j DNAT --to-destination 192.168.5.103
 -A OUTPUT -d 207.12.112.23/32 -p tcp -m tcp --dport 80 -j DNAT --to-destination 192.168.5.104
 -A OUTPUT -d 207.12.112.23/32 -p tcp -m tcp --dport 80 -j DNAT --to-destination 192.168.5.105
 
 #-A OUTPUT -d 207.12.112.23/32 -p tcp -m tcp --dport 3390 -j DNAT --to-destination 192.168.5.3
 #-A OUTPUT -d 207.12.112.23/32 -p tcp -m tcp --dport 3391 -j DNAT --to-destination 192.168.5.5
 #-A OUTPUT -d 207.12.112.23/32 -p tcp -m tcp --dport 3392 -j DNAT --to-destination 192.168.5.7

 #-A OUTPUT -d 207.12.112.23/32 -p tcp -m tcp --dport 3393 -j DNAT --to-destination 192.168.5.103
 COMMIT
 # Completed on Tue Apr 17 16:22:16 2018
 # Generated by iptables-save v1.4.7 on Tue Apr 17 16:22:16 2018
 *filter
 :INPUT DROP [23:1246]
 :FORWARD ACCEPT [334:32539]
 :OUTPUT ACCEPT [90444:86620994]
 -A INPUT -i lo -j ACCEPT
 -A INPUT -s 127.0.0.1/32 -j ACCEPT
 -A INPUT -s 192.168.5.0/24 -j ACCEPT
 -A INPUT -p icmp -m limit --limit 1/s -j ACCEPT
 -A INPUT -p tcp -m tcp --dport 2225 -j ACCEPT
 #-A INPUT -p tcp -m tcp --dport 8050 -j ACCEPT
 -A INPUT -p tcp -m tcp --dport 1024 -j ACCEPT
 -A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
 -A INPUT -p tcp -m tcp --dport 21 -j ACCEPT
 -A INPUT -p tcp -m tcp --dport 20 -j ACCEPT
 -A INPUT -p udp -m udp --dport 161 -j ACCEPT
 -A INPUT -s 35.161.195.158/32 -p tcp -m tcp --dport 25 -j ACCEPT
 -A INPUT -s 35.162.177.17/32 -p tcp -m tcp --dport 25 -j ACCEPT
 -A INPUT -s 52.24.182.128/32 -p tcp -m tcp --dport 25 -j ACCEPT
 -A INPUT -s 52.10.22.200/32 -p tcp -m tcp --dport 25 -j ACCEPT
 -A INPUT -s 204.244.121.165 -p tcp -m tcp --dport 161 -j ACCEPT
 -A INPUT -s 177.129.73.94 -p udp -m udp -j ACCEPT
 -A INPUT -s 177.129.73.94 -p tcp -m tcp -j ACCEPT
 -A INPUT -d 177.129.73.94 -p tcp -m tcp -j ACCEPT
 -A INPUT -d 177.129.73.94 -p udp -m udp -j ACCEPT
 -A INPUT -d 177.129.73.94 -p udp -m udp -j ACCEPT
 -A INPUT -s 201.22.249.111 -p tcp -m tcp --dport 3000 -j ACCEPT
 -A INPUT -d 201.22.249.111 -p tcp -m tcp --dport 3000 -j ACCEPT
 -A INPUT -s 192.168.5.254/32 -p tcp -m tcp --dport 25 -j ACCEPT
 -A INPUT -s 192.168.5.254/32 -p tcp -m tcp --dport 587 -j ACCEPT
 ##############################################################
 -A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
 ########################################################
 -A OUTPUT -p tcp -m tcp --dport 1024 -j ACCEPT
##############################################################
 ######### TOTVS LICENSE SERVER ###########################
 -A INPUT -s licenseservercloud.totvs.com.br -j ACCEPT
 -A FORWARD -s licenseservercloud.totvs.com.br -j ACCEPT
 -A OUTPUT -s licenseservercloud.totvs.com.br -j ACCEPT
 -A INPUT -d licenseservercloud.totvs.com.br -j ACCEPT
 -A FORWARD -d licenseservercloud.totvs.com.br -j ACCEPT
 -A OUTPUT -d licenseservercloud.totvs.com.br -j ACCEPT
 ###### SPOTIFY ######
 -A INPUT -p tcp -m tcp --dport 4070 -j DROP
 -A FORWARD -p tcp -m tcp --dport 4070 -j DROP
 -A OUTPUT -p tcp -m tcp --dport 4070 -j DROP
 ###################################################
 #################################################
 #
 #
 #
#######################################################################################################
#  LIBERA APP SODEXO
####################################################################
-A INPUT -s app.sodexo.com -j ACCEPT
-A FORWARD -s app.sodexo.com -j ACCEPT
-A OUTPUT -s app.sodexo.com -j ACCEPT
-A INPUT -d app.sodexo.com -j ACCEPT
-A FORWARD -d app.sodexo.com -j ACCEPT
-A OUTPUT -d app.sodexo.com -j ACCEPT
######################################################################################################
###### Sinprors.org.br ######
#
-A INPUT -d www.sinprors.org.br -j ACCEPT
-A FORWARD -d www.sinprors.org.br -j ACCEPT
-A OUTPUT -d www.sinprors.org.br -j ACCEPT
#
############################################################################
#       BLOQUEIA O SITE WWW.FILTERBYPASS.ME
###########################################################################
-A INPUT -s www.filterbypass.me -p tcp -m tcp --syn -j DROP
-A INPUT -d www.filterbypass.me -p tcp -m tcp --syn -j DROP
-A FORWARD -s www.filterbypass.me -p tcp -m tcp --syn -j DROP
-A FORWARD -d www.filterbypass.me -p tcp -m tcp --syn -j DROP
-A OUTPUT -s www.filterbypass.me -p tcp -m tcp --syn -j DROP
-A OUTPUT -d www.filterbypass.me -p tcp -m tcp --syn -j DROP
#
 -A INPUT -s www.filterbypass.me -p udp -m udp -j DROP
-A INPUT -d www.filterbypass.me -p udp -m udp -j DROP
-A FORWARD -s www.filterbypass.me -p udp -m udp -j DROP
-A FORWARD -d www.filterbypass.me -p udp -m udp -j DROP
-A OUTPUT -s www.filterbypass.me -p udp -m udp -j DROP
-A OUTPUT -d www.filterbypass.me -p udp -m udp -j DROP
#
############################################################################
# Completed on Tue Apr 17 16:22:16 2018
# Generated by iptables-save v1.4.7 on Tue Apr 17 16:22:16 2018
COMMIT
*mangle
:PREROUTING ACCEPT [9790134:9295642830]
:INPUT ACCEPT [7098622:7124034083]
:FORWARD ACCEPT [2685824:2171251600]
:OUTPUT ACCEPT [7789949:7418060163]
:POSTROUTING ACCEPT [10475773:9589311763]
COMMIT
# Completed on Tue Apr 17 16:22:16 2018
#
# CHAMA CONTROLE DE FIREWALL DE SITES BLOQUEIOS E LIBERAÇAO
